[gd_scene load_steps=6 format=3 uid="uid://dk1r4rparw0qt"]

[ext_resource type="Script" path="res://Overlay/Inventory/inventory_ui.gd" id="1_dkxxi"]
[ext_resource type="LabelSettings" uid="uid://87hgyd466mqi" path="res://Overlay/Inventory/inventory_title_label_settings.tres" id="2_narms"]
[ext_resource type="Resource" uid="uid://bteb4ty3vk5if" path="res://Player/player_data.tres" id="2_nspop"]
[ext_resource type="Texture2D" uid="uid://cbf5oub72pd0s" path="res://Assets/UI/border.png" id="3_fw222"]
[ext_resource type="PackedScene" uid="uid://dya2tongah54e" path="res://Overlay/Inventory/Tooltip/tooltip.tscn" id="4_cmeya"]

[node name="inventory_ui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dkxxi")
player_data = ExtResource("2_nspop")

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.662745)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 16.0

[node name="Border" type="NinePatchRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
texture = ExtResource("3_fw222")
region_rect = Rect2(8, 8, 56, 56)
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Border/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/Border/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Left Hand"
label_settings = ExtResource("2_narms")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Border/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LeftEquipSlotsWrapper" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Border/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="SpacerLeft" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Border2" type="NinePatchRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
texture = ExtResource("3_fw222")
region_rect = Rect2(8, 8, 56, 56)
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Border2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Border2/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/Border2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"
label_settings = ExtResource("2_narms")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Border2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="InvSlotsWrapper" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Border2/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="SpacerRight" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Border3" type="NinePatchRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
texture = ExtResource("3_fw222")
region_rect = Rect2(8, 8, 56, 56)
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Border3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Border3/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/Border3/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Right Hand"
label_settings = ExtResource("2_narms")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Border3/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="RightEquipSlotsWrapper" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Border3/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Tooltip" parent="." instance=ExtResource("4_cmeya")]
visible = false
offset_position = Vector2(20, 20)
